--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,36 @@
 {
-    "name": "hackersofamsterdam/doh-php",
-    "description": "DOH",
-    "require": {
-        "silex/silex": "dev-master",
-        "guzzle/guzzle": "dev-master",
-        "symfony/twig-bridge": "dev-master",
-        "swiftmailer/swiftmailer": "dev-master",
-        "symfony/form": "dev-master",
-        "symfony/validator": "dev-master",
-        "symfony/config": "dev-master",
-        "symfony/translation": "dev-master",
-        "symfony/locale": "dev-master",
-        "symfony/yaml": "dev-master"
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "hackersofamsterdam",
-            "email": "hackersofamsterdam@jrnv.nl"
-        }
-    ],
-    "minimum-stability": "dev"
+	"name": "laravel/laravel",
+	"description": "The Laravel Framework.",
+	"keywords": ["framework", "laravel"],
+	"license": "MIT",
+	"require": {
+		"laravel/framework": "4.2.*"
+	},
+	"autoload": {
+		"classmap": [
+			"app/commands",
+			"app/controllers",
+			"app/models",
+			"app/database/migrations",
+			"app/database/seeds",
+			"app/tests/TestCase.php"
+		]
+	},
+	"scripts": {
+		"post-install-cmd": [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-update-cmd": [
+			"php artisan clear-compiled",
+			"php artisan optimize"
+		],
+		"post-create-project-cmd": [
+			"php artisan key:generate"
+		]
+	},
+	"config": {
+		"preferred-install": "dist"
+	},
+	"minimum-stability": "stable"
 }
